# pairs-trading

./: README.md  backtest_20250429.ipynb  dashboard.py  get_data.ipynb  live_20250515.py  live_20250528.py  live_20250709.py  live_error.py  live_live.py  pyproject.toml  requirements.txt
