[project]
name = "pairs-trading"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "backtesting (>=0.6.3,<0.7.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "binance (>=0.3,<0.4)",
    "networkx (>=3.4.2,<4.0.0)",
    "datetime (>=5.5,<6.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
